--- a/frameworks/g-cloud-9/messages/contract_variation_1.yml
+++ b/frameworks/g-cloud-9/messages/contract_variation_1.yml
@@ -452,7 +452,8 @@ call_off_contract_changes:
                 [Clearly set out the duration of the processing including dates]
                 <br/><br/>
                 <strong>Nature and purposes of the processing:</strong> <br/>
-                [Please be as specific as possible, but make sure that you cover all intended purposes. The nature of the processing means any operation such as collection, recording, organisation, structuring, storage, adaptation or alteration, retrieval, consultation, use, disclosure by transmission, dissemination or otherwise making available, alignment or combination, restriction, erasure or destruction of data (whether or not by automated means) etc) The purpose might include eg: employment processing, statutory obligation, recruitment assessment etc]
+                [Please be as specific as possible, but make sure that you cover all intended purposes. The nature of the processing means any operation such as collection, recording, organisation, structuring, storage, adaptation or alteration, retrieval, consultation, use, disclosure by transmission, dissemination or otherwise making available, alignment or combination, restriction, erasure or destruction of data (whether or not by automated means) etc).<br/> 
+                The purpose might include eg: employment processing, statutory obligation, recruitment assessment etc]
                 <br/><br/>
                 <strong>Type of Personal Data:</strong> <br/>
                 [Examples here include: name, address, date of birth, NI number, telephone number, pay, images, biometric data etc]
