Add link to view dos2 contract variation 1 on gov.uk

--- a/frameworks/digital-outcomes-and-specialists-2/messages/contract_variation_1.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/messages/contract_variation_1.yml
@@ -1,6 +1,7 @@
 variation_description_not_in_place: |
     The Crown Commercial Service (CCS) has made some minor changes to the framework agreement and call-off contract (reference RM1043iv) because of the new General Data Protection Regulation (GDPR).<br/><br/>
-    You must accept these changes for your organisation and have the legal authority to do so.
+    You must accept these changes for your organisation and have the legal authority to do so.<br/><br/>
+    You can also <a href="https://www.gov.uk/government/publications/digital-outcomes-and-specialists-2-framework-agreement" target="_blank">view the changes on GOV.UK</a>.
 
 variation_not_yet_agreed_extra: |
     To put these changes into effect, we need you to review and accept them here.
