--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/accuratelyDescribed.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/accuratelyDescribed.yml
@@ -1,2 +1,6 @@
-question: Do you confirm that all the service descriptions you’re submitting for Digital Outcomes and Specialists&nbsp;3 on the Digital Marketplace will be accurate and true representations?
+name: Service description accuracy
+question: Will all the service descriptions you’re submitting for Digital Outcomes and Specialists&nbsp;3 on the Digital Marketplace be accurate and true representations?
 type: boolean
+assessment:
+  passIfIn:
+    - True
