--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/civilServiceValues.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/civilServiceValues.yml
@@ -1,3 +1,7 @@
+name: Civil Service values
 question: >
   Please confirm you will support the [Civil Service values](https://www.gov.uk/government/publications/civil-service-code/the-civil-service-code) and, if asked, provide evidence of how you do it.
 type: boolean
+assessment:
+  passIfIn:
+    - True
