--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/conspiracy.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/conspiracy.yml
@@ -1,3 +1,4 @@
+name: Organised crime or conspiracy convictions
 question: >
   Please confirm whether, within the past 5 years, anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of:
 
@@ -9,3 +10,6 @@ question: >
 
 type: boolean
 hint: Answer ‘yes’ if anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any of the above.
+assessment:
+  passIfIn:
+    - False
