--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/fullAccountability.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/fullAccountability.yml
@@ -1,4 +1,8 @@
+name: Contractual responsibility and accountability
 question: >
   Please confirm that your organisation will take direct contractual responsibility and full accountability for 
-  delivering the services you’re offering on the framework or, if you’re offering digital specialists, for all the work they will deliver.
+  delivering the services you’re offering on the framework.
 type: boolean
+assessment:
+  passIfIn:
+    - True
