--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/licenceOrMemberRequired.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/licenceOrMemberRequired.yml
@@ -1,3 +1,4 @@
+name: Licence or organisation membership requirement
 question: >
   Please confirm if, to provide the services specified in this procurement, it’s a legal requirement in the state where you’re established to be:
 type: radios
@@ -6,5 +7,6 @@ options:
   - label: a member of a relevant organisation
   - label: none of the above
 validations:
-  - name: answer_required
+  - 
+    name: answer_required
     message: You need to answer this question because your business was not established in the UK.
