--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/subcontracting.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/subcontracting.yml
@@ -1,5 +1,6 @@
+name: Subcontractors or consortia
 question: "Please confirm whether you will provide Digital Outcomes and Specialists&nbsp;3 services:"
-type: radios
+type: checkboxes
 options:
   - label: yourself without the use of third parties (subcontractors)
   - label: as a prime contractor, using third parties (subcontractors) to provide some services
