--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/understandTool.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/understandTool.yml
@@ -1,2 +1,6 @@
-question: Do you understand that you must complete both the supplier declaration and add at least one service before your application to Digital Outcomes and Specialists&nbsp;3 can be considered?
+name: Completing the declaration and adding a service
+question: Do you understand that you must make the supplier declaration and mark at least one service as complete before your application to Digital Outcomes and Specialists&nbsp;3 can be considered?
 type: boolean
+assessment:
+  passIfIn:
+    - True
