Add more cyber security accreditations
These were removed from G-Cloud 9 because suppliers with these accreditations needed to apply to the Cyber framework instead.  But for G-Cloud 10 they will be allowed.

Bump version to 11.2.0

--- a/frameworks/g-cloud-10/questions/services/securityTestingAccreditations.yml
+++ b/frameworks/g-cloud-10/questions/services/securityTestingAccreditations.yml
@@ -12,6 +12,10 @@ followup:
 
 type: checkboxes
 options:
+  - label: CHECK
+    value: check
+  - label: NCSC Certified Cyber Security Consultancy
+    value: cyber-security-consultancy
   - label: Tigerscheme
     value: tigerscheme
   - label: CREST
