Update "G10 coming" message for homepage

--- a/frameworks/g-cloud-10/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-10/messages/homepage-sidebar.yml
@@ -1,8 +1,7 @@
 coming:
-  heading: 'G&#x2011;Cloud&nbsp;10 is coming soon'
+  heading: 'G&#x2011;Cloud&nbsp;10 is opening in April&nbsp;2018'
   messages:
-    - 'Provide cloud hosting, software and support.'
-    - 'You need a supplier account so we can email you as soon as G&#x2011;Cloud opens for applications.'
+    - 'You’ll need to create a supplier account to apply.'
 
 open:
   heading: 'G&#x2011;Cloud&nbsp;10 is open for applications'
