--- a/frameworks/g-cloud-10/questions/declaration/understandTool.yml
+++ b/frameworks/g-cloud-10/questions/declaration/understandTool.yml
@@ -1,5 +1,5 @@
 name: Completing the declaration and adding a service
-question: Do you understand that you must make the supplier declaration and mark at least one service as complete before your application to G-Cloud&nbsp;10 can be considered?
+question: Do you understand that you must complete your company details, make the supplier declaration and mark at least one service as complete before your application to G-Cloud&nbsp;10 can be considered?
 type: boolean
 assessment:
   passIfIn:
