Update to radio buttons for supported browsers
Update based on frequently asked clarification questions.

--- a/frameworks/g-cloud-10/questions/services/browsersSupported.yml
+++ b/frameworks/g-cloud-10/questions/services/browsersSupported.yml
@@ -15,8 +15,10 @@ options:
     value: ie8
   - label: Internet Explorer 9
     value: ie9
-  - label: Internet Explorer 10+
-    value: ie10+
+  - label: Internet Explorer 10
+    value: ie10
+  - label: Internet Explorer 11
+    value: ie11+
   - label: Microsoft Edge
     value: edge
   - label: Firefox
