Change references to changed g-cloud-10 security questions

--- a/frameworks/g-cloud-10/manifests/display_service.yml
+++ b/frameworks/g-cloud-10/manifests/display_service.yml
@@ -26,12 +26,12 @@
 
 - name: Security testing
   questions:
-    - securityTesting
-    - securityTestingWhat
-    - securityTestingWhatOther
-    - securityTestingAccredited
-    - securityTestingAccreditations
-    - securityTestingAccreditationsOther
+    - securityServices
+    - securityServicesWhat
+    - securityServicesWhatOther
+    - securityTestingCertified
+    - securityTestingCertifications
+    - securityTestingCertificationsOther
     - securityTestingCCP
 
 - name: Ongoing support
