--- a/frameworks/g-cloud-10/manifests/edit_service_as_admin.yml
+++ b/frameworks/g-cloud-10/manifests/edit_service_as_admin.yml
@@ -33,10 +33,10 @@
   questions:
     - multiqQAAndTesting
 
-- name: Security testing
+- name: Security services
   editable: true
   questions:
-    - multiqSecurityTesting
+    - multiqSecurityServices
 
 - name: Training
   editable: true
