--- a/frameworks/g-cloud-10/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-10/manifests/edit_submission.yml
@@ -43,11 +43,11 @@
   questions:
     - multiqQAAndTesting
 
-- name: Security testing
+- name: Security services
   editable: false
   edit_questions: true
   questions:
-    - multiqSecurityTesting
+    - multiqSecurityServices
 
 - name: Training
   editable: false
