--- a/frameworks/g-cloud-10/manifests/display_service.yml
+++ b/frameworks/g-cloud-10/manifests/display_service.yml
@@ -26,12 +26,12 @@
 
 - name: Security testing
   questions:
-    - securityServices
-    - securityServicesWhat
-    - securityServicesWhatOther
-    - securityTestingCertified
-    - securityTestingCertifications
-    - securityTestingCertificationsOther
+    - securityTesting
+    - securityTestingWhat
+    - securityTestingWhatOther
+    - securityTestingAccredited
+    - securityTestingAccreditations
+    - securityTestingAccreditationsOther
     - securityTestingCCP
 
 - name: Ongoing support
