--- a/frameworks/g-cloud-10/manifests/edit_service_as_admin.yml
+++ b/frameworks/g-cloud-10/manifests/edit_service_as_admin.yml
@@ -36,7 +36,7 @@
 - name: Security services
   editable: true
   questions:
-    - multiqSecurityServices
+    - multiqSecurityTesting
 
 - name: Training
   editable: true
