--- a/frameworks/g-cloud-10/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-10/manifests/edit_submission.yml
@@ -47,7 +47,7 @@
   editable: false
   edit_questions: true
   questions:
-    - multiqSecurityServices
+    - multiqSecurityTesting
 
 - name: Training
   editable: false
