--- a/frameworks/g-cloud-10/questions/services/securityTesting.yml
+++ b/frameworks/g-cloud-10/questions/services/securityTesting.yml
@@ -16,7 +16,7 @@ depends:
     being:
       - cloud-support
 followup:
-  securityServicesWhat:
+  securityTestingWhat:
     - true
 
 type: boolean
