--- a/frameworks/g-cloud-10/questions/services/serviceCategoriesSupport.yml
+++ b/frameworks/g-cloud-10/questions/services/serviceCategoriesSupport.yml
@@ -27,7 +27,7 @@ options:
         - true
   - label: Security services
     derived_from:
-      question: securityServices
+      question: securityTesting
       any_of:
         - true
   - label: Training
