Change to certification noun
 ## Summary
Change language to consistently use 'certification' rather than
'accreditation' where appropriate (i.e. generally where 'accreditation'
is used as a noun or where we do not need to repeat the same/similar
word close together).

--- a/frameworks/g-cloud-10/questions/services/accreditationsOther.yml
+++ b/frameworks/g-cloud-10/questions/services/accreditationsOther.yml
@@ -1,5 +1,5 @@
-name: Other security accreditations
-question: Do you have any other security accreditations that cover this service?
+name: Other security certifications
+question: Do you have any other security certifications that cover this service?
 
 depends:
   - "on": lot
