--- a/frameworks/g-cloud-10/questions/services/accreditationsOtherList.yml
+++ b/frameworks/g-cloud-10/questions/services/accreditationsOtherList.yml
@@ -1,5 +1,5 @@
-name: Any other security accreditations
-question: What other security accreditations do you have?
+name: Any other security certifications
+question: What other security certifications do you have?
 
 hidden: true
 depends:
@@ -8,15 +8,15 @@ depends:
       - cloud-hosting
       - cloud-software
 
-list_item_name: security accreditation
+list_item_name: security certification
 type: list
 
 validations:
   - name: answer_required
     message: You need to answer this question.
   - name: under_10_words
-    message: You can’t write more than 10 words for each security accreditation.
+    message: You can’t write more than 10 words for each security certification.
   - name: max_items_limit
-    message: You must have 10 or fewer security accreditations.
+    message: You must have 10 or fewer security certifications.
   - name: under_character_limit
-    message: You can’t write more than 100 characters for each security accreditation.
+    message: You can’t write more than 100 characters for each security certification.
