--- a/frameworks/g-cloud-10/questions/services/securityTestingWhatOther.yml
+++ b/frameworks/g-cloud-10/questions/services/securityTestingWhatOther.yml
@@ -8,12 +8,12 @@ depends:
       - cloud-support
 
 type: list
-list_item_name: kind of security services
+list_item_name: kind of security service
 
 validations:
   - name: under_10_words
-    message: You can’t write more than 10 words for each kind of security services.
+    message: You can’t write more than 10 words for each kind of security service.
   - name: max_items_limit
-    message: You must have 10 or fewer kinds of security services.
+    message: You must have 10 or fewer kinds of security service.
   - name: under_character_limit
-    message: You can’t write more than 100 characters for each kind of security services.
+    message: You can’t write more than 100 characters for each kind of security service.
