--- a/frameworks/g-cloud-10/messages/dates.yml
+++ b/frameworks/g-cloud-10/messages/dates.yml
@@ -1,9 +1,9 @@
-clarifications_close_date: '5pm BST, 32 March 2525'
+clarifications_close_date: '5pm BST, Wednesday 9 May 2018'
 
-clarifications_publish_date: '5pm BST, 33 March 2525'
+clarifications_publish_date: '5pm BST, Wednesday 16 May 2018'
 
-framework_close_date: '5pm BST, 34 March 2525'
+framework_close_date: '5pm BST, Wednesday 23 May 2018'
 
-intention_to_award_date: '35 March 2525'
+intention_to_award_date: 'Monday 18 June 2018'
 
-framework_live_date: "36 March 2525"
+framework_live_date: "Monday 2 July 2018"
