--- a/frameworks/g-cloud-10/questions/declaration/MI.yml
+++ b/frameworks/g-cloud-10/questions/declaration/MI.yml
@@ -1,7 +1,7 @@
 name: Providing management information (MI)
 question: >
   Do you confirm that you’re prepared to provide all the monthly G-Cloud&nbsp;10-related management information (MI)
-  to CCS as outlined in the <a href="/suppliers/frameworks/g-cloud-10" target="_blank" rel="noopener noreferrer">reporting template (link opens in a new tab)</a>?
+  to CCS as outlined in the <a href="/suppliers/frameworks/g-cloud-10#guidance" target="_blank" rel="noopener noreferrer">reporting template (link opens in a new tab)</a>?
 type: boolean
 assessment:
   passIfIn:
