Update homepage framework date

--- a/frameworks/g-cloud-10/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-10/messages/homepage-sidebar.yml
@@ -7,7 +7,7 @@ open:
   heading: 'G&#x2011;Cloud&nbsp;10 is open for applications'
   messages:
     - 'You need an account to apply.'
-    - 'The application deadline is 5pm&nbsp;BST, 34 March 2525.'
+    - 'The application deadline is 5pm&nbsp;BST, Wednesday 23 May 2018.'
 
 pending:
   heading: 'G&#x2011;Cloud&nbsp;10 is closed for applications'
