Update content for `become a supplier` messages
At the time of writing G-Cloud 10 is `pending` and so the changes to
`coming` and `open` will never be seen. I'm updating them too for
consistency and in case this file is copied to a new
iteration of the framework in future.

--- a/frameworks/g-cloud-10/messages/become-a-supplier.yml
+++ b/frameworks/g-cloud-10/messages/become-a-supplier.yml
@@ -4,8 +4,8 @@ coming: |
     You will be able to apply to sell:
     <ul class="list-bullet">
       <li>cloud hosting</li>
-      <li>software</li>
-      <li>technical support</li>
+      <li>cloud software</li>
+      <li>cloud support</li>
     </ul>
   </div>
 
@@ -15,8 +15,8 @@ open: |
     You can apply to sell:
     <ul class="list-bullet">
       <li>cloud hosting</li>
-      <li>software</li>
-      <li>technical support</li>
+      <li>cloud software</li>
+      <li>cloud support</li>
     </ul>
   </div>
 
@@ -26,8 +26,8 @@ pending: &can_not_apply |
     You will be able to apply to sell:
     <ul class="list-bullet">
       <li>cloud hosting</li>
-      <li>software</li>
-      <li>technical support</li>
+      <li>cloud software</li>
+      <li>cloud support</li>
     </ul>
   </div>
 
